force-app/main/default/objects/Role__c/fields/Board_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Board_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board Primary Contact</label>
    <type>Checkbox</type>
</CustomField>