force-app/main/default/objects/Role__c/fields/Board_Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Board_Secondary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board Secondary Contact</label>
    <type>Checkbox</type>
</CustomField>