force-app/main/default/objects/Role__c/fields/CS_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>CS_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Primary contact for all communication that is specifically about CS activities, and for invitations to CS events</inlineHelpText>
    <label>CS Primary Contact</label>
    <type>Checkbox</type>
</CustomField>