force-app/main/default/objects/Role__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>Function pick list decided by Kahiwi meeting group</description>
    <inlineHelpText>Please select the appropriate Function and you can also select multiple.</inlineHelpText>
    <label>Function</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chief Executive</fullName>
            </value>
            <value>
                <fullName>Board Chair</fullName>
            </value>
            <value>
                <fullName>Tamariki Lead</fullName>
            </value>
            <value>
                <fullName>Rangatahi Lead</fullName>
            </value>
            <value>
                <fullName>Play Lead</fullName>
            </value>
            <value>
                <fullName>Insights Lead</fullName>
            </value>
            <value>
                <fullName>Spaces and Places Lead</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Coach Development</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Community Sport</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>HP Coaching</fullName>
            </value>
            <value>
                <fullName>HP Director</fullName>
            </value>
            <value>
                <fullName>HP Manager</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Pathway to Podium</fullName>
            </value>
            <value>
                <fullName>Regional Sports director</fullName>
            </value>
            <value>
                <fullName>Talent Development</fullName>
            </value>
            <value>
                <fullName>Young people</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>