force-app/main/default/objects/Role__c/fields/HP_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>HP_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HP Primary Contact</label>
    <type>Checkbox</type>
</CustomField>