force-app/main/default/objects/Role__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>