force-app/main/default/objects/Role__c/fields/Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Type__c</fullName>
    <formula>TEXT( Organisation__r.Type )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisation Type</label>
    <type>Text</type>
</CustomField>