force-app/main/default/objects/Role__c/validationRules/Start_and_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_and_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be before Start Date</errorMessage>
</ValidationRule>